[gd_scene load_steps=5 format=3 uid="uid://wpsa1gva3g46"]

[ext_resource type="Script" path="res://assets/scripts/level select.gd" id="1_g703y"]
[ext_resource type="FontFile" uid="uid://dj4wghlpfdosm" path="res://assets/fonts/font.ttf" id="2_edbyx"]
[ext_resource type="Texture2D" uid="uid://dw3nrgi3f2tv1" path="res://assets/textures/pixil-frame-0-104.png" id="3_pf7ec"]

[sub_resource type="Theme" id="Theme_01gsh"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(0.14902, 0.635294, 0.92549, 1)
Button/constants/outline_size = 4
Button/fonts/font = ExtResource("2_edbyx")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_g703y")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GridContainer" type="GridContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -278.0
offset_top = -2.0
offset_right = 278.0
offset_bottom = 274.0
grow_horizontal = 2
grow_vertical = 2
columns = 4

[node name="lvl1" type="Button" parent="CanvasLayer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_01gsh")
text = "1"
icon = ExtResource("3_pf7ec")
flat = true
icon_alignment = 1

[node name="lvl2" type="Button" parent="CanvasLayer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_01gsh")
text = "2"
icon = ExtResource("3_pf7ec")
flat = true
icon_alignment = 1

[node name="lvl3" type="Button" parent="CanvasLayer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_01gsh")
text = "3"
icon = ExtResource("3_pf7ec")
flat = true
icon_alignment = 1

[node name="lvl4" type="Button" parent="CanvasLayer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_01gsh")
text = "4"
icon = ExtResource("3_pf7ec")
flat = true
icon_alignment = 1

[node name="lvl5" type="Button" parent="CanvasLayer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_01gsh")
text = "5"
icon = ExtResource("3_pf7ec")
flat = true
icon_alignment = 1

[node name="lvl6" type="Button" parent="CanvasLayer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_01gsh")
text = "6
"
icon = ExtResource("3_pf7ec")
flat = true
icon_alignment = 1

[node name="lvl7" type="Button" parent="CanvasLayer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_01gsh")
text = "7"
icon = ExtResource("3_pf7ec")
flat = true
icon_alignment = 1

[node name="lvl8" type="Button" parent="CanvasLayer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_01gsh")
text = "8"
icon = ExtResource("3_pf7ec")
flat = true
icon_alignment = 1

[connection signal="pressed" from="CanvasLayer/GridContainer/lvl1" to="." method="_on_lvl_1_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/lvl2" to="." method="_on_lvl_2_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/lvl3" to="." method="_on_lvl_3_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/lvl4" to="." method="_on_lvl_4_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/lvl5" to="." method="_on_lvl_5_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/lvl6" to="." method="_on_lvl_6_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/lvl7" to="." method="_on_lvl_7_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/lvl8" to="." method="_on_lvl_8_pressed"]
